unpackaged/main/default/objects/ContractLineItem/fields/Account2__c.field-meta.xml
<CustomField>
    <fullName>Account2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SaaS Platform</relationshipLabel>
    <relationshipName>Contract_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>