unpackaged/main/default/objects/ContractLineItem/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>