unpackaged/main/default/objects/ContractLineItem/fields/Additional_Disc__c.field-meta.xml
<CustomField>
    <fullName>Additional_Disc__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OBSOLETE Additional Disc. (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>