unpackaged/main/default/objects/ContractLineItem/fields/ASM_Increase__c.field-meta.xml
<CustomField>
    <fullName>ASM_Increase__c</fullName>
    <label>ASM Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>