unpackaged/main/default/objects/ContractLineItem/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <description>Twin Field</description>
    <label>Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>