unpackaged/main/default/objects/ContractLineItem/fields/Campaign_Discount__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Discount__c</fullName>
    <description>Twin field for Quote Line.</description>
    <label>Campaign Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>