unpackaged/main/default/objects/ContractLineItem/fields/Customer_Is_New_Discount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Is_New_Discount__c</fullName>
    <label>New Customer Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>