unpackaged/main/default/objects/ContractLineItem/fields/Eligible_Discount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Discount__c</fullName>
    <description>Twin field for Quote Line. The discount given to the Customer by the Sales Person.</description>
    <label>Eligible Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>