unpackaged/main/default/objects/ContractLineItem/fields/Eligible_Discretionary_Discount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Discretionary_Discount__c</fullName>
    <description>Twin field for Quote Line</description>
    <label>Max Eligible Behavioural Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>