unpackaged/main/default/objects/ContractLineItem/fields/Eligible_NFP_Discount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_NFP_Discount__c</fullName>
    <description>Twin field for Quote Line</description>
    <label>Max Eligible NFP Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>