unpackaged/main/default/objects/ContractLineItem/fields/End_Terminated_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Terminated_Date__c</fullName>
    <description>Shows end date unless there is a terminated date.</description>
    <formula>IF(ISBLANK(SBQQSC__TerminatedDate__c),   SBQQSC__SubscriptionEndDate__c , SBQQSC__TerminatedDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End/ Terminated Date</label>
    <type>Date</type>
</CustomField>