unpackaged/main/default/objects/ContractLineItem/fields/Entitlement_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Case_Type__c</fullName>
    <label>Entitlement Case Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entitlement_Case_Type</valueSetName>
    </valueSet>
</CustomField>