unpackaged/main/default/objects/ContractLineItem/fields/Entitlement_Priority__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Priority__c</fullName>
    <label>Entitlement Priority</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entitlement_Priority</valueSetName>
    </valueSet>
</CustomField>