unpackaged/main/default/objects/ContractLineItem/fields/Flipped_from_Asset__c.field-meta.xml
<CustomField>
    <fullName>Flipped_from_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flipped from Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>