unpackaged/main/default/objects/ContractLineItem/fields/Flipped_from_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Flipped_from_Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flipped from Contract Line</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Contract Line Items (Flipped from Contract Line)</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>