unpackaged/main/default/objects/ContractLineItem/fields/Generated_by_Auto_amendment__c.field-meta.xml
<CustomField>
    <fullName>Generated_by_Auto_amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generated by Auto-amendment</label>
    <type>Checkbox</type>
</CustomField>