unpackaged/main/default/objects/ContractLineItem/fields/IsRampUp__c.field-meta.xml
<CustomField>
    <fullName>IsRampUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRampUp</label>
    <type>Checkbox</type>
</CustomField>