unpackaged/main/default/objects/ContractLineItem/fields/Latest_Weighted_Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Latest_Weighted_Average_Price__c</fullName>
    <label>Latest Weighted Average Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>