unpackaged/main/default/objects/ContractLineItem/fields/Market_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Market_Adjustment__c</fullName>
    <description>Twin field</description>
    <label>Region Pricing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>