unpackaged/main/default/objects/ContractLineItem/fields/Non_Product_Count_BD__c.field-meta.xml
<CustomField>
    <fullName>Non_Product_Count_BD__c</fullName>
    <label>Non Product Count BD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>