unpackaged/main/default/objects/ContractLineItem/fields/oAdditionalDiscount__c.field-meta.xml
<CustomField>
    <fullName>oAdditionalDiscount__c</fullName>
    <formula>SBQQSC__Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>oAdditionalDiscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>