unpackaged/main/default/objects/ContractLineItem/fields/oCustomerPrice__c.field-meta.xml
<CustomField>
    <fullName>oCustomerPrice__c</fullName>
    <formula>SBQQSC__CustomerPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>oCustomerPrice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>