unpackaged/main/default/objects/ContractLineItem/fields/oDistributorDiscount__c.field-meta.xml
<CustomField>
    <fullName>oDistributorDiscount__c</fullName>
    <formula>SBQQSC__DistributorDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>oDistributorDiscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>