unpackaged/main/default/objects/ContractLineItem/fields/oListPrice__c.field-meta.xml
<CustomField>
    <fullName>oListPrice__c</fullName>
    <formula>SBQQSC__ListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>oListPrice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>