unpackaged/main/default/objects/ContractLineItem/fields/oNetPrice__c.field-meta.xml
<CustomField>
    <fullName>oNetPrice__c</fullName>
    <formula>SBQQSC__NetPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>oNetPrice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>