unpackaged/main/default/objects/ContractLineItem/fields/oPartnerDiscount__c.field-meta.xml
<CustomField>
    <fullName>oPartnerDiscount__c</fullName>
    <formula>SBQQSC__PartnerDiscount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>oPartnerDiscount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>