unpackaged/main/default/objects/ContractLineItem/fields/oPartnerPrice__c.field-meta.xml
<CustomField>
    <fullName>oPartnerPrice__c</fullName>
    <formula>SBQQSC__RegularPrice__c * (1- SBQQSC__PartnerDiscount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>oPartnerPrice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>