unpackaged/main/default/objects/ContractLineItem/fields/oRegularPrice__c.field-meta.xml
<CustomField>
    <fullName>oRegularPrice__c</fullName>
    <formula>SBQQSC__RegularPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>oRegularPrice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>