unpackaged/main/default/objects/ContractLineItem/fields/oUnproratedCustomerPrice__c.field-meta.xml
<CustomField>
    <fullName>oUnproratedCustomerPrice__c</fullName>
    <formula>Unprorated_Customer_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>oUnproratedCustomerPrice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>