unpackaged/main/default/objects/ContractLineItem/fields/Parent_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Name__c</fullName>
    <formula>SBQQSC__RequiredByProduct__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Product Name</label>
    <type>Text</type>
</CustomField>