unpackaged/main/default/objects/ContractLineItem/fields/PoT_on_ASM__c.field-meta.xml
<CustomField>
    <fullName>PoT_on_ASM__c</fullName>
    <label>PoT on ASM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>