unpackaged/main/default/objects/ContractLineItem/fields/Product1__c.field-meta.xml
<CustomField>
    <fullName>Product1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product1</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Modules</relationshipLabel>
    <relationshipName>Product1</relationshipName>
    <type>Lookup</type>
</CustomField>