unpackaged/main/default/objects/ContractLineItem/fields/Product_Asset__c.field-meta.xml
<CustomField>
    <fullName>Product_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product3</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Service Packs</relationshipLabel>
    <relationshipName>Product_Asset</relationshipName>
    <type>Lookup</type>
</CustomField>