unpackaged/main/default/objects/ContractLineItem/fields/Product_SCL__c.field-meta.xml
<CustomField>
    <fullName>Product_SCL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product2</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Service Packs</relationshipLabel>
    <relationshipName>Product_SCL</relationshipName>
    <type>Lookup</type>
</CustomField>