unpackaged/main/default/objects/ContractLineItem/fields/Renewal_Uplift_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Uplift_Type__c</fullName>
    <label>Renewal Uplift Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>