unpackaged/main/default/objects/ContractLineItem/fields/SaaS_Platform__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SaaS Platform</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Service Catalogue</relationshipLabel>
    <relationshipName>SaaS_Platform</relationshipName>
    <type>Lookup</type>
</CustomField>