unpackaged/main/default/objects/ContractLineItem/fields/Scheduled_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End_Date__c</fullName>
    <label>Scheduled End Date</label>
    <type>Date</type>
</CustomField>