unpackaged/main/default/objects/ContractLineItem/fields/Service_Pack__c.field-meta.xml
<CustomField>
    <fullName>Service_Pack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Pack</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Service_Pack</relationshipName>
    <type>Lookup</type>
</CustomField>