unpackaged/main/default/objects/ContractLineItem/fields/Subscription_Percent__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Percent__c</fullName>
    <label>Subscription Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>