unpackaged/main/default/objects/ContractLineItem/fields/Third_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Type__c</fullName>
    <description>Used for revenue distribution in revenue transactions</description>
    <label>Third Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Third_Party_Type</valueSetName>
    </valueSet>
</CustomField>