unpackaged/main/default/objects/ContractLineItem/fields/Unprorated_Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>Unprorated_Customer_Price__c</fullName>
    <description>Twin field from quote line.</description>
    <label>Unprorated Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>