unpackaged/main/default/objects/ContractLineItem/fields/Weighted_Average_Price_Amend_Renew__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Price_Amend_Renew__c</fullName>
    <description>Weighted Average Price used for Amendment and/ or Renewals.</description>
    <formula>IF(Latest_Weighted_Average_Price__c = 0,   Weighted_Average_Price__c,  Latest_Weighted_Average_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Average Price Amend/ Renew</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>